syntax = "proto3";
option go_package="/user";

package user;

import "google/api/annotations.proto";

message User{
    int64 id =1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
}


message RegisterUserRequest{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
}

message UserId{
    int64 id =1;
}

message UpdateUserResquest{
    int64 id =1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string phone = 5;

}

message UpdateUserResponse{
    int64 user_id =1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
}

message DeleteUserResponse{

}
service UserService{


    rpc GetUser(UserId)returns (User){
        option (google.api.http)={
            get: "/v1/user/{id}"
        };
    };

    rpc RegisterUser(RegisterUserRequest)returns (User){
        option (google.api.http)={
            post: "/v1/register"
            body: "*"
        };
    };

    rpc UpdateUser(UpdateUserResquest) returns (UpdateUserResponse){
        option (google.api.http)={
            patch: "/v1/user/{id}"
            body:"*"
        };
    };
    
    rpc DeleteUser(UserId) returns (DeleteUserResponse){
        option (google.api.http)={
            delete:"/v1/user/{id}"
        };
    };
    

}